--- a/scripts/Dockerfile
+++ b/scripts/Dockerfile
@@ -1,6 +1,5 @@
 FROM alpine:3.21
 
-# Install CI/automation tools and Python with pip
 RUN apk update && apk add --no-cache \
   bash \
   openssl \
@@ -8,16 +7,10 @@ RUN apk update && apk add --no-cache \
   curl \
   wget \
   unzip \
-  python3 \
-  py3-pip
+  python3
 
-# Create pip symlink
-RUN ln -s /usr/bin/pip3 /usr/bin/pip
-
-# Optional: Install Ansible system package for faster CI if preferred
-# RUN apk add --no-cache ansible
+RUN python3 -m ensurepip && \
+    ln -s /usr/bin/pip3 /usr/bin/pip || true
 
 WORKDIR /app
-
-# Default shell for scripts
 SHELL ["/bin/bash", "-c"]
