--- a/.github/workflows/infra-pipeline.yml
+++ b/.github/workflows/infra-pipeline.yml
@@ -19,10 +19,12 @@ jobs:
         run: |
           mkdir -p /app
           cp -r . /app
-      - name: Run Vault secrets generator
-        working-directory: /app
+      - name: Write SSH Key to Vault
         run: |
-          bash scripts/vault-generate-secrets.sh
+            vault kv put secret/ssh_keys/media-stack_worker public="@${HOME}/.ssh/id_ed25519.pub" private="@${HOME}/.ssh/id_ed25519"
+        env:
+          VAULT_TOKEN: $"root"  # set manually for act
+
 
   ansible:
     needs: secrets
