--- a/.github/workflows/infra-pipeline.yml
+++ b/.github/workflows/infra-pipeline.yml
@@ -21,7 +21,7 @@ jobs:
           cp -r . /app
       - name: Write SSH Key to Vault
         run: |
-            vault kv put secret/ssh_keys/media-stack_worker public="@/app/.ssh/id_ed25519.pub" private="@/app/.ssh/id_ed25519"
+          vault kv put secret/ssh_keys/media-stack_worker public="@/app/.ssh/id_ed25519.pub" private="@/app/.ssh/id_ed25519"
         env:
           VAULT_TOKEN: $"root"  # set manually for act
 
@@ -38,6 +38,10 @@ jobs:
       - name: Install Ansible
         run: |
           pip install ansible
+      - name: Install Ansible and requirements
+        run: |
+          pip install ansible hvac
+          ansible-galaxy collection install community.hashi_vault
       - name: Run Ansible playbook
         working-directory: /app
         run: |
