--- a/.github/workflows/infra-pipeline.yml
+++ b/.github/workflows/infra-pipeline.yml
@@ -19,13 +19,17 @@ jobs:
         run: |
           mkdir -p /app
           cp -r . /app
+      - name: Generate SSH Key if not present
+        run: |
+          mkdir -p /app/.ssh
+          [ -f /app/.ssh/id_ed25519 ] || ssh-keygen -t ed25519 -N "" -f /app/.ssh/id_ed25519
       - name: Write SSH Key to Vault
         run: |
-          vault kv put secret/ssh_keys/media-stack_worker public="@/app/.ssh/id_ed25519.pub" private="@/app/.ssh/id_ed25519"
+          vault kv put secret/ssh_keys/media-stack_worker public=@/app/.ssh/id_ed25519.pub private=@/app/.ssh/id_ed25519
         env:
-          VAULT_TOKEN: $"root"  # set manually for act
-
-
+          VAULT_TOKEN: "root"
+        working-directory: /app
+  
   ansible:
     needs: secrets
     runs-on: ubuntu-latest
