--- a/.github/workflows/infra-pipeline.yml
+++ b/.github/workflows/infra-pipeline.yml
@@ -15,18 +15,14 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-
       - name: Prepare /app workspace
         run: |
           mkdir -p /app
           cp -r . /app
-
       - name: Generate SSH Key if not present
         run: |
           mkdir -p /app/.ssh
-          # This command creates an ed25519 key if it does not exist
           [ -f /app/.ssh/id_ed25519 ] || ssh-keygen -t ed25519 -N "" -f /app/.ssh/id_ed25519
-
       - name: Write SSH Key to Vault
         run: |
           vault kv put secret/ssh_keys/media-stack_worker public=@/app/.ssh/id_ed25519.pub private=@/app/.ssh/id_ed25519
@@ -35,7 +31,7 @@ jobs:
         working-directory: /app
 
   terraform:
-    needs: ansible
+    needs: secrets
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -51,9 +47,9 @@ jobs:
           terraform init
           terraform plan
           terraform apply -auto-approve
-        
+
   ansible:
-    needs: secrets
+    needs: terraform
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -61,9 +57,6 @@ jobs:
         run: |
           mkdir -p /app
           cp -r . /app
-      - name: Install Ansible
-        run: |
-          pip install ansible
       - name: Install Ansible and requirements
         run: |
           pip install ansible hvac
