Refactor Node.js installation in Dockerfile
Removed nodejs and npm installation from Dockerfile and added Node.js installation via NodeSource.

--- a/scripts/Dockerfile
+++ b/scripts/Dockerfile
@@ -14,11 +14,15 @@ RUN apt-get update && DEBIAN_FRONTEND=noninteractive apt-get install -y \
   python3 \
   python3-venv \
   python3-pip \
-  nodejs \
-  npm \
   jq \
   coreutils \
   && apt-get clean && rm -rf /var/lib/apt/lists/*
+
+# --- Node.js installation (via NodeSource) ---
+RUN curl -fsSL https://deb.nodesource.com/setup_20.x | bash - && \
+    apt-get install -y nodejs && \
+    ln -sf /usr/bin/node /usr/local/bin/node && \
+    ln -sf /usr/bin/npm /usr/local/bin/npm
 
 # --- Python setup ---
 RUN python3 -m venv /opt/venv
