Refactor Dockerfile for better setup and verification
Updated Dockerfile to improve Node.js verification, added symlinks, and reorganized installation steps for Python packages and Docker Buildx plugin.

--- a/scripts/Dockerfile
+++ b/scripts/Dockerfile
@@ -7,6 +7,7 @@ FROM cimg/python:3.12
 # System dependencies
 # -------------------------------
 USER root
+
 RUN apt-get update && DEBIAN_FRONTEND=noninteractive apt-get install -y \
     bash \
     curl \
@@ -30,64 +31,80 @@ RUN apt-get update && DEBIAN_FRONTEND=noninteractive apt-get install -y \
 RUN curl -fsSL https://deb.nodesource.com/setup_20.x | bash - && \
     apt-get install -y nodejs
 
-# Verify Node.js
-RUN node -v && npm -v
+# Verify Node.js and create symlinks in common locations
+RUN node -v && npm -v && \
+    ln -sf /usr/bin/node /usr/local/bin/node && \
+    ln -sf /usr/bin/npm /usr/local/bin/npm
 
 # -------------------------------
 # Python virtual environment
 # -------------------------------
-RUN python3 -m venv /opt/venv
-ENV PATH="/opt/venv/bin:/usr/local/bin:/usr/bin:/bin:$PATH"
-
-# Upgrade pip and tools
-RUN pip install --upgrade pip setuptools wheel
+RUN python3 -m venv /opt/venv && \
+    chown -R circleci:circleci /opt/venv
 
 # -------------------------------
 # Terraform installation
 # -------------------------------
 ARG TERRAFORM_VERSION=1.9.8
-RUN curl -sLo /tmp/terraform.zip https://releases.hashicorp.com/terraform/${TERRAFORM_VERSION}/terraform_${TERRAFORM_VERSION}_linux_amd64.zip && \
+RUN curl -sLo /tmp/terraform.zip \
+    https://releases.hashicorp.com/terraform/${TERRAFORM_VERSION}/terraform_${TERRAFORM_VERSION}_linux_amd64.zip && \
     unzip /tmp/terraform.zip -d /usr/local/bin/ && \
     rm /tmp/terraform.zip && \
+    chmod +x /usr/local/bin/terraform && \
     terraform -version
 
 # -------------------------------
 # Vault installation
 # -------------------------------
 ARG VAULT_VERSION=1.15.2
-RUN curl -sLo /tmp/vault.zip https://releases.hashicorp.com/vault/${VAULT_VERSION}/vault_${VAULT_VERSION}_linux_amd64.zip && \
+RUN curl -sLo /tmp/vault.zip \
+    https://releases.hashicorp.com/vault/${VAULT_VERSION}/vault_${VAULT_VERSION}_linux_amd64.zip && \
     unzip /tmp/vault.zip -d /usr/local/bin/ && \
     rm /tmp/vault.zip && \
+    chmod +x /usr/local/bin/vault && \
     vault --version
 
 # -------------------------------
-# Ansible and Python libraries
+# Docker Buildx plugin (system-wide)
 # -------------------------------
-RUN pip install \
-    ansible \
-    hvac \
-    requests \
-    boto3
-
-# Install Ansible Galaxy collections for Vault integration
-RUN ansible-galaxy collection install community.hashi_vault
-
-# -------------------------------
-# Docker Buildx plugin
-# -------------------------------
-RUN mkdir -p ~/.docker/cli-plugins && \
+RUN mkdir -p /usr/local/lib/docker/cli-plugins && \
     curl -sSL https://github.com/docker/buildx/releases/download/v0.17.1/buildx-v0.17.1.linux-amd64 \
-      -o ~/.docker/cli-plugins/docker-buildx && \
-    chmod +x ~/.docker/cli-plugins/docker-buildx
+      -o /usr/local/lib/docker/cli-plugins/docker-buildx && \
+    chmod +x /usr/local/lib/docker/cli-plugins/docker-buildx && \
+    ln -sf /usr/local/lib/docker/cli-plugins/docker-buildx /usr/local/bin/docker-buildx
 
-# Verify Buildx
-RUN docker buildx version || true
+# Also install in circleci user's home for compatibility
+RUN mkdir -p /home/circleci/.docker/cli-plugins && \
+    cp /usr/local/lib/docker/cli-plugins/docker-buildx /home/circleci/.docker/cli-plugins/ && \
+    chown -R circleci:circleci /home/circleci/.docker
+
+# -------------------------------
+# Switch to circleci user
+# -------------------------------
+USER circleci
+
+# Upgrade pip and install Python packages
+RUN /opt/venv/bin/pip install --upgrade pip setuptools wheel && \
+    /opt/venv/bin/pip install ansible hvac requests boto3
+
+# Install Ansible Galaxy collections
+RUN /opt/venv/bin/ansible-galaxy collection install community.hashi_vault
 
 # -------------------------------
 # Final setup
 # -------------------------------
-WORKDIR /app
-SHELL ["/bin/bash", "-c"]
+WORKDIR /home/circleci/project
 
-# Set PATH for all subsequent steps
-ENV PATH="/opt/venv/bin:$PATH"
+# Set environment variables
+ENV PATH="/opt/venv/bin:/usr/local/bin:/usr/bin:/bin:$PATH" \
+    DOCKER_CONFIG=/home/circleci/.docker
+
+# Verify all tools
+RUN node --version && \
+    npm --version && \
+    terraform --version && \
+    vault --version && \
+    ansible --version && \
+    docker buildx version
+
+SHELL ["/bin/bash", "-c"]
