--- a/.github/workflows/infra-pipeline.yml
+++ b/.github/workflows/infra-pipeline.yml
@@ -1,5 +1,4 @@
 name: Infra Orchestration Pipeline
-
 on:
   push:
     branches: [main]
@@ -7,51 +6,30 @@ on:
     branches: [main]
 
 env:
-  VAULT_ADDR: ${{ secrets.VAULT_ADDR }}
-  VAULT_TOKEN: ${{ secrets.VAULT_TOKEN }}
+  VAULT_ADDR: $"192.168.50.169:8200"
+  VAULT_TOKEN: $"root"
 
 jobs:
-  # ----------------------
-  # Setup Node.js for Docker Buildx / Node actions
-  # ----------------------
-  setup-node:
-    runs-on: ubuntu-latest
-    outputs:
-      node-path: ${{ steps.node-path.outputs.node-path }}
-    steps:
-      - name: Set up Node.js
-        id: node-path
-        uses: actions/setup-node@v6
-        with:
-          node-version: "20.x"
-
   # ----------------------
   # Secrets job: generate SSH keys & write to Vault
   # ----------------------
   secrets:
     runs-on: ubuntu-latest
-    needs: setup-node
     steps:
       - uses: actions/checkout@v3
-
-      - name: Prepare /app workspace
-        run: |
-          mkdir -p /app
-          cp -r . /app
-
+      
       - name: Generate SSH Key if not present
         run: |
-          mkdir -p /app/.ssh
-          [ -f /app/.ssh/id_ed25519 ] || ssh-keygen -t ed25519 -N "" -f /app/.ssh/id_ed25519
-
+          mkdir -p .ssh
+          [ -f .ssh/id_ed25519 ] || ssh-keygen -t ed25519 -N "" -f .ssh/id_ed25519
+      
       - name: Write SSH Key to Vault
         run: |
           vault kv put secret/ssh_keys/media-stack_worker \
-            public=@/app/.ssh/id_ed25519.pub \
-            private=@/app/.ssh/id_ed25519
+            public=@.ssh/id_ed25519.pub \
+            private=@.ssh/id_ed25519
         env:
-          VAULT_TOKEN: "root"
-        working-directory: /app
+          VAULT_TOKEN: $"root"
 
   # ----------------------
   # Terraform job: provision infrastructure
@@ -61,17 +39,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-
-      - name: Prepare /app workspace
-        run: |
-          mkdir -p /app
-          cp -r . /app
-
+      
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v3
-
+      
       - name: Run Terraform Init/Plan/Apply
-        working-directory: /app/terraform/media-stack
+        working-directory: terraform/media-stack
         run: |
           terraform init
           terraform plan
@@ -85,19 +58,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-
-      - name: Prepare /app workspace
-        run: |
-          mkdir -p /app
-          cp -r . /app
-
-      - name: Install Ansible and requirements
-        run: |
-          pip install --upgrade pip
-          pip install ansible hvac
-          ansible-galaxy collection install community.hashi_vault
-
+      
       - name: Run Ansible playbook
-        working-directory: /app
-        run: |
-          ansible-playbook ansible/media-stack/media-stack_pb.yml
+        run: ansible-playbook ansible/media-stack/media-stack_pb.yml
+        env:
+          VAULT_TOKEN: $"root"
