--- a/.github/workflows/infra-pipeline.yml
+++ b/.github/workflows/infra-pipeline.yml
@@ -6,13 +6,10 @@ on:
     branches: [main]
 
 env:
-  VAULT_ADDR: $"192.168.50.169:8200"
-  VAULT_TOKEN: $"root"
+  VAULT_ADDR: http://192.168.50.169:8200  # Remove ${{ secrets.VAULT_ADDR }}
+  VAULT_TOKEN: root  # Remove ${{ secrets.VAULT_TOKEN }}
 
 jobs:
-  # ----------------------
-  # Secrets job: generate SSH keys & write to Vault
-  # ----------------------
   secrets:
     runs-on: ubuntu-latest
     steps:
@@ -29,11 +26,9 @@ jobs:
             public=@.ssh/id_ed25519.pub \
             private=@.ssh/id_ed25519
         env:
-          VAULT_TOKEN: $"root"
+          VAULT_ADDR: http://192.168.50.169:8200
+          VAULT_TOKEN: root
 
-  # ----------------------
-  # Terraform job: provision infrastructure
-  # ----------------------
   terraform:
     needs: secrets
     runs-on: ubuntu-latest
@@ -49,10 +44,9 @@ jobs:
           terraform init
           terraform plan
           terraform apply -auto-approve
+        env:
+          VAULT_TOKEN: root
 
-  # ----------------------
-  # Ansible job: configure LXC worker nodes
-  # ----------------------
   ansible:
     needs: terraform
     runs-on: ubuntu-latest
@@ -62,4 +56,4 @@ jobs:
       - name: Run Ansible playbook
         run: ansible-playbook ansible/media-stack/media-stack_pb.yml
         env:
-          VAULT_TOKEN: $"root"
+          VAULT_TOKEN: root
